--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             Hi , I am Raman Gill & currently working as a Lead CNC programmer at
             Direct Fixture & Gauge Inc.I started learning web development
             last year(2020) as a hobby but then I really started enjoy
-            HTML5,CSS3 and JavaScript, solving problems and creating new & cool
+            HTML5,CSS3,Github and JavaScript, solving problems and creating new & cool
             features.Now, I'm fully invested in learning & mastering these
             languages and frameworks.
           </p>
@@ -173,7 +173,7 @@
           <h4>web developement</h4>
           <div class="underline"></div>
           <p>
-             I can build a website from start to finish using HTML5,CSS3 and Javascript.
+             I can build a website from start to finish using HTML5,CSS3,Github and Javascript.
           </p>
         </article>
         <!-- single service end -->
