--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
         <!-- single project -->
         <article class="single-project">
           <div class="project-container">
-            <img src="./images/project-1.jpeg" alt="project1" />
+            <img src="./images/project-1.png" alt="project1" />
             <a href="#" class="project-icon">
               <i class="fas fa-home"></i>
             </a>
