--- a/projects.html
+++ b/projects.html
@@ -87,12 +87,8 @@
             </a>
           </div>
           <div class="project-details">
-            <h4>project name</h4>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Aspernatur quae tempora libero cupiditate aperiam modi iure
-              doloremque accusamus ipsam soluta.
-            </p>
+            <h4>nanoer techonology Inc.</h4>
+            <p>This is a project for an oil refining company.</p>
             <div class="project-footer">
               <span><i class="fab fa-github"></i></span>
               <a href="https://github.com/ramandeep5176">source code</a>
