--- a/contact.html
+++ b/contact.html
@@ -84,6 +84,7 @@
             >@ramandeepgill5176@gmail.com</a
           >
         </p>
+        <p><a href="./RESUME (1).pdf" download="">download resume</a></p>
         <p>
           You can also reach me on linkedin at
           <a href="https://www.linkedin.com/feed/">@ ramandeep gill </a>
